--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.3"
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
